--- a/views/new.erb
+++ b/views/new.erb
@@ -1,6 +1,9 @@
 <h2>Add New Post</h2>
-<p><form>
- <textarea class="form-control" rows="6"></textarea> <br />
-<button type="submit" class="btn btn-info">Submit</button>
-</form>
+
+
+<p>
+  <form action="/new" method="POST">
+ 		<textarea class="form-control" rows="6" placeholder="Type text post"></textarea> <br />
+		<button type="submit" class="btn btn-info">Submit</button>
+  </form>
 </p>
