Read content variable from post request

--- a/views/new.erb
+++ b/views/new.erb
@@ -3,7 +3,7 @@
 
 <p>
   <form action="/new" method="POST">
- 		<textarea class="form-control" rows="6" placeholder="Type text post"></textarea> <br />
+ 		<textarea  style="width: 400px"class="form-control" rows="6" name="content" placeholder="Type text post"></textarea> <br />
 		<button type="submit" class="btn btn-info">Submit</button>
   </form>
 </p>
