--- a/views/details.erb
+++ b/views/details.erb
@@ -7,6 +7,16 @@
 </p>
 <br />
 <h4>Comments:</h4>
+
+<%@comments.each do |comment| %>
+<p>
+	<%= comment['content'] %>
+	<br />
+	<span style="font-size: 75%; color: #999">Added at: <%= comment['created_date'] %></span>
+
+</p>
+
+<% end %>
 <p>
   <form action="/deteils/<%= @row['id'] %>" method="POST">
  		<textarea  class="form-control" rows="6" name="content" placeholder="Type comment here"></textarea> <br />
